[package]
name = "sos_medecin_horaires"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json", "cookies"] }
thiserror = "1"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"